# arknights-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_POLICY.md  DATA_SOURCES.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SPEC.md  TAKEDOWN_POLICY.md  THREAT_MODEL.md  config.example.toml  conftest.py  pyproject.toml
.github/workflows/: ci.yml
config/: data_sources.example.toml  data_sources.toml
deploy/: README.md
deploy/docker/: .dockerignore  Dockerfile  arknights-mcp.env.example  docker-compose.yml
deploy/nginx/: arknights-mcp.conf
deploy/systemd/: arknights-mcp.env.example  arknights-mcp.service
docs/adr/: 0001-dual-transport-one-core.md  0002-immutable-promotion.md  0003-no-query-time-source-network.md  0004-code-only-distribution.md  0005-source-registry-and-takedown.md  0006-oauth-oidc-remote-auth.md  0007-banner-archive-carve.md  0008-art-asset-url-references.md  0009-image-refs-authenticated-emit.md  0010-effect-description-template-import.md  0011-response-shape-v0.2.md  0012-response-shape-v0.2-m14-fold.md  0013-locale-retire.md  README.md
docs/clients/: claude-code.md  codex.md  remote.md
migrations/: 0002_enemy_domain.sql  0003_stage_domain.sql  0004_operator_domain.sql
src/arknights_mcp/: __init__.py  __main__.py  app.py  cli.py  config.py  instructions.py
tests/: __init__.py
tests/contract/: test_kengxxiao_cross_validate.py  test_live_upstream.py  test_mcp_inspector_contract.py
tests/golden/: test_golden_suite.py
tests/integration/: test_serve_stdio_smoke.py  test_serve_streamable_http_smoke.py  test_transport_parity.py
tests/perf/: test_perf_benchmark.py
tests/remote/: test_privacy_log_scan.py  test_remote_authenticated_e2e.py  test_remote_oauth_discovery.py  test_remote_security_privacy.py
tests/support/: __init__.py  drops.py  items.py  oidc_issuer.py  remote_harness.py
tests/unit/: conftest.py  test_accept_announcements.py  test_accept_banners.py  test_accept_extra_locale_aliases.py  test_accept_image_refs.py  test_accept_penguin_drops.py  test_accept_stage_4_4.py  test_adrs.py  test_agent_guides.py  test_analyze_stage_tool.py  test_analyzer_rules.py  test_analyzer_stage_aerial.py  test_announcement_source_review.py  test_announcements_adapter.py  test_arknights_assets_adapter.py  test_bearer_auth_asgi.py  test_ci_matrix.py  test_cli_import.py  test_cli_package_split.py  test_cli_source.py  test_cli_status_doctor.py  test_cli_sync.py  test_cli_sync_announcements.py  test_cli_sync_extra_locale.py  test_cli_sync_penguin.py  test_client_facing_text.py  test_client_setup_docs.py  test_coerce.py  test_compare_operator_modules_tool.py  test_config.py  test_cost_item_nameability.py  test_data_status_service.py  test_db_connection.py  test_dependency_pins.py  test_deploy_examples.py  test_envelopes.py  test_farming_analyzer.py  test_field_policy.py  (+76 more)
(+182 files in other folders)
