[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arknights-mcp"
version = "0.2.0"
description = "Read-only Arknights Intelligence MCP server: one shared core, local stdio + private OAuth/OIDC Streamable HTTP, over versioned SQLite snapshots."
requires-python = ">=3.12,<3.13"
# Runtime dependencies are declared and locked in task T3 (V25: mcp>=1.28.1,<2).
dependencies = [
    "mcp>=1.28.1,<2",
    "pydantic>=2,<3",
    "pyjwt[crypto]>=2.10,<3",
    "sqlalchemy>=2,<3",
    # Streamable HTTP transport (§T51/§I.api): ASGI app + server. Already resolved
    # transitively via mcp; declared directly now that the transport imports them.
    "starlette>=0.47,<2",
    "uvicorn>=0.34,<1",
]
keywords = ["arknights", "mcp", "model-context-protocol", "intelligence"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
arknights-mcp = "arknights_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arknights_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["arknights_mcp"]
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "hatchling>=1.31.0",
    "hypothesis>=6.156.6",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
